# LDA_Test

./: LDA_Basic.ipynb  Topic_Modelling.ipynb  notebook.ipynb  pyproject.toml  requirements.txt  topics.xlsx
LDA_Coherence/: notebook.ipynb  topics.xlsx
LDA_Lean_Coherence/: notebook.ipynb
data/: sentenças_educacao.xlsx
