[tool.poetry]
name = "topic-modeling-paper"
version = "0.1.0"
description = ""
authors = ["Etore-BeS <etorebraga@usp.br>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.0,<3.13"
openpyxl = "^3.1.2"


[tool.poetry.group.nlp.dependencies]
spacy = "^3.7.4"
gensim = "^4.3.2"
nltk = "^3.8.1"
pandas = "^2.2.2"
matplotlib = "^3.8.4"
ydata-profiling = "^4.7.0"
pt_core_news_lg = {url = "https://github.com/explosion/spacy-models/releases/download/pt_core_news_lg-3.7.0/pt_core_news_lg-3.7.0.tar.gz"}
unidecode = "^1.3.8"


[tool.poetry.group.lda.dependencies]
pyldavis = "^3.4.1"


[tool.poetry.group.transformers.dependencies]
transformers = "^4.40.0"
datasets = "^2.19.0"
bertopic = "^0.16.1"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
taskipy = "^1.12.2"
ruff = "^0.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
lint = 'ruff check .; ruff check . --diff'
format = 'ruff check . --fix; ruff format .'
run = 'poetry run jupyter notebook'


